# NodeWasmStudy

./: Dockerfile  README.md  run-docker.sh
benchmark/: Dockerfile  utils.py
data/: dependency-analysis-results.json  wasm-evolution.json
data/collect-dataset/: npm_wasm_packages.json  scraped_dependents_metadata.json
data/collect-dataset/ghtopdep_results/: 0918nobita__wasm-ts__results.json  0xPolygonHermez__pil-stark__results.json  0xsequence__sequence.js__results.json  101arrowz__fzstd__results.json  3box__3box-js__results.json  APIDevTools__swagger-express-middleware__results.json  (+760 more)
data/debugging/: mystery-wasm.json  package-static-insts.json  repos-with-dump-bugs.json  repos-with-error.json
data/summary-json/: calls-through-table.json  dce-stats.json  exports-called-count.json  instantiation-counts.json  wasm-imports.json  wasm-modules-interop-type.json
dataset/: README.md
example/: clean-log.txt  example-listing.txt  example-log.txt  example.js  example.wasm  example.wat
scripts/: collect-dataset.py  collect-dynamic-results.py  debugging.py  dependency-analysis.py  fixes.py  get-graphs.py  get-summary-data.py  utils.py
scripts/dynamic-analysis/: example.js  example.wasm  main.js  main.wasm  main.wat  package-lock.json  package.json  tracing.js  transform-dir.sh  transform.js  untransform-dir.sh  untransform.py
scripts/get-wasm-source/: get-wasm-source.js  package.json
scripts/get-wasm-static-info/: Cargo.toml
scripts/get-wasm-static-info/src/: main.rs
scripts/node-experimental-vm-modules/: node
scripts/node-no-expose-wasm/: node
(+5757 files in other folders)
