[package]
name = "get-wasm-static-info"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
env_logger = "0.11.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
wasmparser = "0.209.1"

[dev-dependencies]
walkdir = "2.3.2"
